--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,31 @@ main {
     padding: 1rem;
 }
 
+/* Confirmation Message Styles */
+.confirmation-message {
+    background-color: #dff0d8;
+    color: #3c763d;
+    padding: 1rem;
+    border: 1px solid #d6e9c6;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    text-align: center;
+    display: none;
+    position: fixed;
+    top: 98px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    width: 80%;
+    max-width: 600px;
+}
+
+.confirmation-message.delete {
+    background-color: #f8d7da;
+    color: #721c24;
+    border-color: #f5c6cb;
+}
+
 /* Product List Styles */
 #product-list {
     max-width: 1200px;
@@ -62,7 +87,7 @@ main {
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 250px; /* Adjusted width for the filter search bar */
+    width: 250px;
 }
 
 #filters select {
@@ -137,6 +162,11 @@ main {
     margin: 0.5rem 0;
     text-align: center;
     flex-grow: 1; /* Allow description to take available space */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Limit to 3 lines */
+    -webkit-box-orient: vertical;
 }
 
 #products li .buttons {
@@ -225,6 +255,7 @@ main {
     background-color: #45a049;
 }
 
+/* Error Message Styles */
 .error-message {
     color: red;
     font-size: 0.875rem;
